exo4 bonus liste vide

--- a/1.Demo&Exo/4.JEE/exercises/exo4/src/main/webapp/style/style.css
+++ b/1.Demo&Exo/4.JEE/exercises/exo4/src/main/webapp/style/style.css
@@ -24,5 +24,12 @@ tr>td:last-of-type{
     background-color:yellow;
 }
 
+h1.table{
+    color: hotpink;
+}
+
+h2.emptymessage{
+    color: red;
+}
 
 
