exo product (pas encore fait ou fini  le tri par categorie/tranche de prix, detail nom ajouté

--- a/1.Demo&Exo/5.Spring/exercises/product/src/main/resources/templates/page_products.html
+++ b/1.Demo&Exo/5.Spring/exercises/product/src/main/resources/templates/page_products.html
@@ -9,7 +9,7 @@
 
 <p th:if="${products != null}">
 <p th:each="p : ${products}">
-    <a th:href="@{/detail/{id}(id=${p.getId()})}"> <span th:text="${p.getName()}"></span></a>
+    <a th:href="@{products/detail/{id}(id=${p.getId()})}"> <span th:text="${p.getId()}"></span></a>  <span th:text="${p.getName()}"></span>
 </p>
 
 
