--- a/1.Demo&Exo/5.Spring/exercises/product/src/main/resources/templates/page_home.html
+++ b/1.Demo&Exo/5.Spring/exercises/product/src/main/resources/templates/page_home.html
@@ -7,7 +7,7 @@
 <body>
 <h1> Welcome to the homepage </h1>
 
-<p> Click <a th:href="@{/list}">here </a> to see product list</p>
+<p> Click <a th:href="@{/products}">here </a> to see product list</p>
 
 </body>
 </html>
