--- a/1.Demo&Exo/5.Spring/exercises/exo4kitchen/src/main/resources/templates/homepage.html
+++ b/1.Demo&Exo/5.Spring/exercises/exo4kitchen/src/main/resources/templates/homepage.html
@@ -7,10 +7,10 @@
 <body>
 <th:block th:fragment="navbar">
     <a th:href="@{/}">Home</a>
-    <a th:href="@{/createrecipe/}"> new_recipe</a>
-    <a th:href="@{/recipes/}"> recipe_list </a>
-    <a th:href="@{/createcategory/}"> new_category</a>
-    <a th:href="@{/categories/}"> category_list </a>
+    <a th:href="@{/createrecipe}"> new_recipe</a>
+    <a th:href="@{/recipes}"> recipe_list </a>
+    <a th:href="@{/createcategory}"> new_category</a>
+    <a th:href="@{/categories}"> category_list </a>
 </th:block>
 
 <h1> Welcome to the M2I kitchen test app </h1>
