--- a/1.Demo&Exo/5.Spring/exercises/exo4kitchen/src/main/resources/templates/recipeT/listpage.html
+++ b/1.Demo&Exo/5.Spring/exercises/exo4kitchen/src/main/resources/templates/recipeT/listpage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Recipes list</title>
+    <title>Recipes</title>
 </head>
 <body>
 <span th:replace="~{homepage :: navbar}"></span>
