continuation exo4 ( formulaire recipe fonctionne en mettant une valeur pour la valeur id int avant sinon crash car integer primitive null), manquerait à gérer la liste d'ingredients. Rajout d'element de correction (update delete)

--- a/1.Demo&Exo/5.Spring/exercises/exo4kitchen/src/main/resources/templates/recipeT/createpage.html
+++ b/1.Demo&Exo/5.Spring/exercises/exo4kitchen/src/main/resources/templates/recipeT/createpage.html
@@ -27,7 +27,7 @@
 
 <div>
     <select class="form-select" th:field="*{category_id}">
-        <option value="">-- Choose category --</option>
+        <option value="-1">-- Choose category --</option>
         <option th:each="categori : ${categories}"
                 th:value="${categori.id}"
                 th:text="${categori.name}">
