le code fonctionnait bien (juste que je me suis trompé sur un rename de chemin entrestudent controller et la ligne 12 de signuupage.html)

--- a/1.Demo&Exo/5.Spring/exercises/exercice3Spring_sql/studentform/src/main/resources/templates/signuppage.html
+++ b/1.Demo&Exo/5.Spring/exercises/exercice3Spring_sql/studentform/src/main/resources/templates/signuppage.html
@@ -9,7 +9,7 @@
 <h1> Please submit student informations </h1>
 <a th:href="@{/}"> Home </a>
 
-<form method="post" th:action="@{/add}" th:object="${student}">
+<form method="post" th:action="@{/signup}" th:object="${student}">
     <input th:field="*{id}" type="hidden" />
     <div>
         <label for="lastname">Last name :</label>
