ajout de tailwind (j'ai mis le /* import tailwind */ sur styles.css pour garder mon css counter de base) + remis le check isPair dans le decrement que j'ai enlevé accidentellement

--- a/6_Angular/exercices/exo1/exercice1/src/app/components/counter/counter.html
+++ b/6_Angular/exercices/exo1/exercice1/src/app/components/counter/counter.html
@@ -1,4 +1,6 @@
-
+<h1 class ="bg-gray-100 p-6 rounded mx-auto shadow-md max-w-xs">
+    test tailwind
+</h1>
 <section>
             <p [class]="isPair ? 'green' : 'red' "> Count : {{ count }}</p>
 </section>
