--- a/6_Angular/exercices/exo1/exercice1/src/app/components/navbar/navbar.html
+++ b/6_Angular/exercices/exo1/exercice1/src/app/components/navbar/navbar.html
@@ -9,11 +9,22 @@
         </li>
 
         <li>
+            <a routerLink="/pipes">Pipes</a>    
+        </li>
+
+        <li>
             <a routerLink="/counter">Counter</a>
         </li>
 
         <li>
             <a routerLink="/series">Series</a>
         </li>
+
+        <li>
+            <a routerLink="/library">Library</a>
+        </li>
+
+
+
     </ul>
 </nav>
