--- a/6_Angular/exercices/exo1/exercice1/src/app/components/navbar/navbar.html
+++ b/6_Angular/exercices/exo1/exercice1/src/app/components/navbar/navbar.html
@@ -24,6 +24,10 @@
             <a routerLink="/library">Library</a>
         </li>
 
+        <li>
+            <a routerLink="/form">Form</a>
+        </li>
+
 
 
     </ul>
