--- a/6_Angular/exercices/exo1/exercice1/src/app/components/navbar/navbar.html
+++ b/6_Angular/exercices/exo1/exercice1/src/app/components/navbar/navbar.html
@@ -1,34 +1,47 @@
-<nav>
-    <ul>
+<nav class="bg-gray-800 p-4">
+     <div class="container mx-auto flex justify-between items-center">
+        <div class="text-white font-bold text-xl">
+            <a href="">Mes exercices</a>
+        </div>
+        
+    <ul class="flex space-x-4">
+  
         <li>
-            <a routerLink="/">Home</a>
+            <a routerLink="/" class="text-gray-300 font-bold hover:text-white">Home</a>
         </li>
 
         <li>
-            <a routerLink="/blocks">Blocks</a>
+            <a routerLink="/blocks" class="text-gray-300 font-bold hover:text-white">Blocks</a>
         </li>
 
         <li>
-            <a routerLink="/pipes">Pipes</a>    
+            <a routerLink="/pipes" class="text-gray-300 font-bold hover:text-white">Pipes</a>    
         </li>
 
         <li>
-            <a routerLink="/counter">Counter</a>
+            <a routerLink="/form" class="text-gray-300 font-bold hover:text-white">Form</a>
+        </li>
+
+
+        <li>
+            <a routerLink="/counter" class="text-gray-300 font-bold hover:text-white">Counter</a>
         </li>
 
         <li>
-            <a routerLink="/series">Series</a>
+            <a routerLink="/series" class="text-gray-300 font-bold hover:text-white">Series</a>
         </li>
 
         <li>
-            <a routerLink="/library">Library</a>
+            <a routerLink="/library" class="text-gray-300 font-bold hover:text-white">Library</a>
         </li>
 
         <li>
-            <a routerLink="/form">Form</a>
+            <a routerLink="/pokemon" class="text-gray-300 font-bold hover:text-white">Pokemon</a>
         </li>
+
 
 
 
     </ul>
+    </div>
 </nav>
