--- a/6_Angular/exercices/exo1/exercice1/src/app/components/pokemon/pokemon.html
+++ b/6_Angular/exercices/exo1/exercice1/src/app/components/pokemon/pokemon.html
@@ -6,23 +6,15 @@
 
     <div class="container mx-auto p-6">
     @for (pokemon of pokemons; track pokemon; let i = $index) {
-            <p class="text-blue-600">{{ i }} - {{ pokemon.nameP }} - {{ pokemon.descriptionP }} - {{ pokemon.types }} </p>
-            <br>
-            <div> <p class="text-red-900 font-bold">Attacks: </p>
-                @for (attack of pokemon.attacks; track attack; let j = $index){
-                    <p class="text-gray-600"> - {{attack.nameA}} | {{ attack.type}} | {{attack.damage}}</p>
-                    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{attack.descriptionA}}</p>
-                    
-                } 
-                <br>
-                <div class = "bg-gray-800 p-4"></div>
-            </div>
-            
+    <app-pokemon-card [message]="parentMessage" [pokemon]="pokemon" (dataEmitted)="handleData($event)" />
+    <br>
+    <div class = "bg-gray-800 p-4"></div>
+
         }
 
         </div>
     </section>
-
+       <p>{{receiveData}}</p> 
 
     <section>
  
@@ -54,31 +46,34 @@
             <legend>Attacks</legend>
 
             @for (control of attacks.controls; track control; let i = $index){
-                <fieldset [formGroupName="i"]>
-                    <legend> Attack n°{{i}}</legend>
+                <fieldset [formGroupName]="i">
+                    <legend> Attack n°{{i+1}}</legend>
                     <div>
-                        <label [for]="'namee' + i">Attack Name</label>
-                        <input type="text" [name]="'namee' + i" formControlName="nameA" class="border border-solid to-black">
+                        <label [for]="'name' + i+1">Attack Name</label>
+                        <input type="text" [name]="'name' + i+1" formControlName="nameA" class="border border-solid to-black">
                     </div>
                     
                     <div>
-                        <label [for]="'descriptionn' + i ">Attack Description</label>
-                        <input type="text" [name]="'descriptionn'+ i" formControlName="descriptionA" class="border border-solid to-black">
+                        <label [for]="'description' + i+1 ">Attack Description</label>
+                        <input type="text" [name]="'description'+ i+1" formControlName="descriptionA" class="border border-solid to-black">
                     </div>
 
                     <div>
                         <label [for]="'damage' + i ">Attack Damage</label>
-                        <input type="number" [name]="'damage' + i" formControlName="damage" class="border border-solid to-black">
+                        <input type="number" [name]="'damage' + i+1" formControlName="damage" class="border border-solid to-black">
                     </div>
                     <div>
                         <label [for]="'type'+ i">Attack Type</label>
-                        <input type="text" [name]="'type' + i" formControlName="type" class="border border-solid to-black">
+                        <input type="text" [name]="'type' + i+1" formControlName="type" class="border border-solid to-black">
                     </div>
                     </fieldset>
                 }
-            
-                <button (click)="addAttack()">Add Attack</button>   
+                 <button type="button" (click)="addAttack()">Add Attack</button>   
+                 <p> @if (attacks.length >3){
+                 Max attack limit (4), you cannot add more ! }
+                 </p>
         </fieldset> 
-        <button>Save</button>
+        <br>
+        <button type="submit">Save</button>
     </form>
 </section>
