exo8 presque fonctionnellement fini (manque les boutons previous next)

--- a/6_Angular/exercices/exo1/exercice1/src/app/components/navbar/navbar.html
+++ b/6_Angular/exercices/exo1/exercice1/src/app/components/navbar/navbar.html
@@ -39,7 +39,9 @@
             <a routerLink="/pokemon" class="text-gray-300 font-bold hover:text-white">Pokemon</a>
         </li>
 
-
+        <li>
+            <a routerLink="/post-list-pkmn" class="text-gray-300 font-bold hover:text-white">PokemonPostList</a>
+        </li>
 
 
     </ul>
